# reddit-gtk

./: COPYING  meson.build  org.example.App.json
_build/meson-logs/: meson-log.txt
_build/meson-private/cmake_gee-0.8/: CMakeCache.txt  Makefile  cmake_install.cmake
data/: org.example.App.appdata.xml.in  org.example.App.desktop.in  org.example.App.gschema.xml
po/: meson.build
src/: JsonServiceGIS.vala  ScrollWindow.vala  main.vala  meson.build  yaffa.gresource.xml
src/Models/: Post.vala  Settings.vala
src/Services/: RedditJsonService.vala  SettingsManager.vala
src/Styles/: style.css
src/Widgets/: MainToolbar.vala  Post.vala  Preview.vala  RedditHeader.vala  ScrollWindow.vala
